@@ -74,7 +74,7 @@
 <!ENTITY lfs-vim-version              "7.4">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20160808">
+<!ENTITY blfs-bootscripts-version     "20160902">
 <!ENTITY systemd-units-version        "20160602">
 
 
