@@ -48,6 +48,14 @@
       <para>September 2nd, 2016</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Fix slapd script to better support initd-tools. Fixes
+          <ulink url="&blfs-ticket-root;8255">#8255</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to xf86-video-intel from git. Fixes
+          <ulink url="&blfs-ticket-root;8246">#8246</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - Update to feh-2.17.1. Fixes
           <ulink url="&blfs-ticket-root;8249">#8249</ulink>.</para>
         </listitem>
